--- a/clippy.css
+++ b/clippy.css
@@ -119,7 +119,12 @@
 }
 
 
-#clippyBubbleText a li, #clippyBubbleText li a {
+#clippyBubbleText ul {
+	         padding-left:24px;
+	-webkit-padding-start:24px;
+	text-decoration:none;
+}
+#clippyBubbleText a li, #clippyBubbleText ul a {
 	list-style-image:url(bullet.png);
 	color:black;
 	text-decoration:none;
